# lecture_exercises

./: .gitignore  readme.md
data_lakes/lake-lecture-emma/: diary-entry.txt  pyproject.toml  upload-entry.py
python_101/hadoop-logs/: aggregated_logs.csv  logs.csv  pyproject.toml
python_101/hadoop-logs/hadoop_logs/: aggregate_logs.py  parse_logs.py  visualize_logs.py
week10_dc/: Dockerfile  docker-compose.yaml  fast.py  pyproject.toml
week10_dc/api/: fast.py
week11_airflow/: airflow.cfg  airflow.db  pyproject.toml  (+1 more)
week20_pyspark/: baseline.ipynb  baseline.py  basic-job.py  pyproject.toml  testing.ipynb
week20_pyspark/spark-warehouse/bucketed_table/: .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00000.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00001.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00002.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00003.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00004.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00005.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00006.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00007.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00008.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00009.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00010.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00011.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00012.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00013.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00014.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00015.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00016.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00017.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00018.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00019.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00020.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00021.c000.snappy.parquet.crc  .part-00000-de4eb6b7-33af-4b3a-a066-5cee595ddc01_00022.c000.snappy.parquet.crc  (+127 more)
week21_streaming/: docker-compose.yml  publish_sales.py  pyproject.toml  setup-clickhouse.py  subscriber.py
week22_streaming_processing/: beam_sample.py  log_sample.txt  output.txt-00000-of-00001  publisher.py  pyproject.toml  subscriber.py  window_publisher.py  window_subscriber.py
(+33 files in other folders)
