[tool.poetry]
name = "week10-dc"
version = "0.1.0"
description = ""
authors = ["Emma Berniczky <e.berniczky@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
python = ">=3.9"
sqlalchemy = "^2.0.40"
psycopg = { version = ">=2.9.0", extras = ["binary"] }
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
