[tool.poetry]
name = "spark testing"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.8"
pyspark = "^3.5.4"
nbresult = "^0.1.0"
jupyter = "^1.1.1"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
