[project]
name = "week21-streaming"
version = "0.1.0"
description = ""
authors = [
    {name = "Emma Berniczky",email = "e.berniczky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "clickhouse-driver (>=0.2.9,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
