[project]
name = "lake-lecture-emma"
version = "0.1.0"
description = ""
authors = [
    {name = "Emma Berniczky",email = "e.berniczky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage (>=3.0.0,<4.0.0)",
    "google-cloud-datacatalog (>=3.25.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
